✨ feat: add cyber button

--- a/docs/beta/1.md
+++ b/docs/beta/1.md
@@ -3,7 +3,9 @@ tags: [beta]
 prev:
     link: ./README.md
     text: 2024-06-11T14:41_欧拉公式
-next: false
+next: 
+    link: ./2.md
+    text: 赛博按钮
 title: ASCII字符画生成工具
 ---
 
