📃 docs: new documents

--- a/docs/learn/英语/期末资料 .md
+++ b/docs/learn/英语/期末资料 .md
@@ -4,7 +4,9 @@ title: 英语-复习资料1
 prev: 
    link: ./README.md
    text: 英语
-next: false
+next:
+   link: ./期末资料2.md
+   text: 2024-2025 复习资料
 ---
 
 # 2023-2024年第二学期《大学英语AII》期末复习范围
