--- a/docs/learn/建筑结构/复习资料2.md
+++ b/docs/learn/建筑结构/复习资料2.md
@@ -29,7 +29,7 @@ next: false
 - 正常使用极限状态：__结构或结构构件达到正常使用的某项规定限值或耐久性能的某种规定状态__
 - 裂缝随后贯穿构件的整个横截面，开裂截面的混凝土提出工作，这时拉力全部由 __钢筋__ 承担
 - 轴心受压构件根据配置箍筋的不同分为 __普通箍筋柱__ 和 __螺旋箍筋柱__ ，螺旋式箍筋可以约束其内部混凝土的变形，因而可以提高构件的受压承载力
-- 受弯构件材料选用： __$净距≥30、1.5d$__
+- 受弯构件材料选用： __$\text{净距}≥30 \text{、} 1.5d$__
 - 受弯构件：
   - __混凝土开裂前的未开裂阶段__：
         加载开始时，混凝土和钢筋的应力都不大， __受拉区的拉力由受拉钢筋和受拉区混凝土共同承担，混凝土的应力呈三角形分布__
@@ -41,11 +41,11 @@ next: false
 - 适筋梁破坏（延性破坏）：__受拉钢筋首先达到屈服强度，然后受压区混凝土被压碎，钢筋和混凝土的强度都能得到充分利用__
 - 脆性破坏：__当超筋梁受压区混凝土被压碎时，受拉钢筋强度尚未被充分利用__
 - 两类T形梁的判别：
-  - 第一种类型，中和轴在翼缘内，即 $χ≤hｔ'$
-  - 第二种类型：中和轴在梁（肋）内，即 $χ＞hｔ'$
+  - 第一种类型，中和轴在翼缘内，即 $χ≤h \text{ｔ}'$
+  - 第二种类型：中和轴在梁（肋）内，即 $χ \text{＞}h \text{ｔ}'$
 - __箍筋__ 和 __弯起钢筋（或斜筋）__ 统称为 __腹筋__
 - 剪跨比：$λ$ 是个无量纲的参数，集中荷载作用下梁的某一截面的剪跨比等于该截面的弯矩值与该截面的剪力值和有效高度乘积之比：$λ=M/Vh$ ₒ
-- 剪压破坏： $1≤λ≤3$ ；斜拉破坏： $λ＞3$
+- 剪压破坏： $1≤λ≤3$ ；斜拉破坏： $λ \text{＞}3$
 - 钢筋混凝土构件产生裂缝的原因：
     - __荷载作用引起的裂缝__
     - __变形因素（非荷载）引起的裂缝：结构的不均匀沉降，材料收缩、温度变化、混凝土碳化以及在混凝土浇筑时的凝结及硬化等__
