📃 docs: new tech document

--- a/docs/tech/14.md
+++ b/docs/tech/14.md
@@ -4,7 +4,9 @@ cover: '/img/154.jpg'
 prev:
     link: ./13.md
     text: 怎么获取文件夹结构并包含里面的文件
-next: false
+next: 
+    link: ./15.md
+    text: 解决 .gitignore 规则不生效问题
 title: 记录：error：externally-managed-environment
 ---
 
