✨ feat: video components

--- a/docs/beta/6.md
+++ b/docs/beta/6.md
@@ -2,14 +2,19 @@
 title: 嵌入视频
 ---
 
-## 【BOF: TT】Umikaze Moment - わかどり + saaa
+## 【BOF:TT】"the Tower of NIRV(ニルヴの心臓)" TJ.hangneil + Atomic Sphere feat.Annabel
 
 <ClientOnly>
   <!-- 在这里给 VPEmbedHTML3 添加 src 属性，指定视频地址 -->
-  <VPMeowWbb src="//player.bilibili.com/player.html?isOutside=true&aid=113254948999101&bvid=BV1DP1RYZE5d&cid=26155683752&p=1" />
+  <VPMeowWbb src="//player.bilibili.com/player.html?isOutside=true&aid=113351115933293&bvid=BV1Z4yWYmE7G&cid=26413695852&p=1" />
 </ClientOnly>
 
 ## 【BOF: TT】かたぎり ft. 可不 - あかず【BGA】
 <ClientOnly>
   <VPMeowWbb src="//player.bilibili.com/player.html?isOutside=true&aid=113346049282152&bvid=BV1tRy5YBEcH&cid=26412191594&p=1" />
+</ClientOnly>
+
+## 【肝崩铁】
+<ClientOnly>
+  <VPMeowWbb src="https://larch2352-my.sharepoint.com/personal/tr_wenturc_com/_layouts/15/embed.aspx?UniqueId=e6c99b32-320f-4076-9fce-cc34c06b2786&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" />
 </ClientOnly>
