--- a/docs/beta/6.md
+++ b/docs/beta/6.md
@@ -16,5 +16,9 @@ title: 嵌入视频
 
 ## 【肝崩铁】
 <ClientOnly>
-  <VPMeowWbb src="https://larch2352-my.sharepoint.com/personal/tr_wenturc_com/_layouts/15/embed.aspx?UniqueId=e6c99b32-320f-4076-9fce-cc34c06b2786&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" />
+  <VPMeowWbb src="https://larch2352-my.sharepoint.com/personal/tr_wenturc_com/_layouts/15/embed.aspx?UniqueId=e6c99b32-320f-4076-9fce-cc34c06b2786&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=OneUpFileViewer&referrerScenario=EmbedDialog.Create" />
 </ClientOnly>
+
+:::tip
+好像`OneDrive`在没有登录的情况下无法查看视频
+:::
