📃 docs: commit too much

--- a/docs/tech/1.md
+++ b/docs/tech/1.md
@@ -7,210 +7,108 @@ prev:
 next: 
    link: ./2.md
    text: Hyper-V虚拟交换机无法显示交换机列表
-title: 原神伤害公式
+title: 高效协作：如何在Outlook中使用共享邮箱地址发送邮件
 ---
 
-在《原神》中，伤害计算的公式确实存在，且相对复杂，涉及多种因素。基本伤害公式如下：
-$$
-\text{总伤害} = \left( \text{技能伤害} \times \text{攻击力} \times (1 + \text{伤害加成}) \times \text{暴击倍率} \times (1 - \text{抗性倍率}) \times \text{敌人减伤倍率} \right)
-$$
-下面是对每个部分的详细解释：
 
-1. **技能伤害**：技能面板上显示的基础倍率。
-2. **攻击力**：包括角色基础攻击力和装备（武器、圣遗物）提供的攻击力。
-3. **伤害加成**：来自圣遗物的元素伤害加成、角色天赋、武器特效等的总和。
-4. **暴击倍率**：
-   $$
-   \text{暴击倍率} = 1 + \left( \text{暴击伤害} \times \text{暴击率} \right)
-   $$
-   若未暴击，则为1，若暴击则为1 + 暴击伤害。
-5. **抗性倍率**：敌人的抗性计算较为复杂，基本公式为：
-   $$
-   \text{抗性倍率} = 1 - \left( \frac{\text{抗性} - \text{减抗} - \text{抗性削弱}}{100 + \left| \text{抗性} - \text{减抗} - \text{抗性削弱} \right|} \right)
-   $$
-6. **敌人减伤倍率**：敌人有时会有减伤效果，例如护盾或特定技能效果。
+## **高效协作：如何在Outlook中使用共享邮箱地址发送邮件**
 
-### 示例计算
+在现代企业协作中，团队沟通的效率直接影响工作成果。共享邮箱作为一种共享邮箱工具，能够帮助团队集中处理邮件、分配任务并确保信息透明。然而，许多用户在使用Outlook时对共享邮箱的操作仍存在困惑。本文将详细介绍如何在Outlook中通过共享邮箱地址发送邮件，涵盖常见问题及最佳实践。
 
-假设一个角色的普通攻击计算，假设以下数据：
+---
 
-- 技能伤害倍率：100% (1.0)
-- 角色攻击力：2000
-- 伤害加成：50% (0.5)
-- 暴击率：50% (0.5)
-- 暴击伤害：100% (1.0)
-- 敌人抗性：10%
-- 减抗：0%
-- 抗性削弱：0%
-- 敌人减伤倍率：0%
+### **一、什么是共享邮箱？为何需要使用它？**
 
-计算步骤如下：
+共享邮箱是一个由多人共同管理的邮箱账户，通常用于部门（如`sales@company.com`）、项目组或特定职能（如`support@company.com`）。其核心优势包括：
+- **信息共享**：所有成员可查看和回复同一邮箱的邮件，避免信息孤岛。
+- **权限控制**：管理员可灵活分配访问或发送权限。
+- **专业形象**：对外使用统一邮箱地址，提升客户信任感。
 
-1. **技能伤害部分**：
-   $$
-   \text{技能伤害} = 1.0
-   $$
+---
 
-2. **攻击力部分**：
-   $$
-   \text{攻击力} = 2000
-   $$
+### **二、在Outlook中添加共享邮箱的步骤**
 
-3. **伤害加成部分**：
-   $$
-   1 + 0.5 = 1.5
-   $$
+**前提条件**：确保已获得管理员分配的共享邮箱访问权限。
 
-4. **暴击倍率部分**：
-   $$
-   \text{暴击倍率} = 1 + (0.5 \times 1.0) = 1.5 \quad (\text{暴击时})
-   $$
-   $$
-   \text{暴击倍率} = 1 \quad (\text{非暴击时})
-   $$
+#### **1. Outlook桌面版（Windows/Mac）**
+- **步骤1**：打开Outlook，点击左上角 **文件** > **账户设置** > **账户设置**。
+- **步骤2**：选择主邮箱账户，点击 **更改** > **其他设置** > **高级** > **添加**。
+- **步骤3**：输入共享邮箱名称（如`support@company.com`），确认后重启Outlook即可在左侧文件夹列表中看到共享邮箱。
 
-5. **抗性倍率部分**：
-   $$
-   \text{抗性倍率} = 1 - \left( \frac{10 - 0 - 0}{100 + |10 - 0 - 0|} \right) = 1 - \frac{10}{110} = 0.909
-   $$
+#### **2. Outlook网页版（Web）**
+- 登录Outlook网页端，右键点击左侧导航栏的邮箱名称，选择 **添加共享文件夹**，输入共享邮箱地址并确认。
 
-6. **敌人减伤倍率部分**：
-   $$
-   \text{敌人减伤倍率} = 1 \quad (\text{无减伤})
-   $$
+#### **3. 移动端（iOS/Android）**
+- 需通过Exchange或Office 365账户手动添加组邮箱，具体路径因版本而异。
 
-暴击时：
-$$
-\text{总伤害} = 1.0 \times 2000 \times 1.5 \times 1.5 \times 0.909 \times 1 = 4090.5 
-$$
+---
 
-非暴击时：
-$$
-\text{总伤害} = 1.0 \times 2000 \times 1.5 \times 1 \times 0.909 \times 1 = 2727 
-$$
+### **三、通过组邮箱地址发送邮件的3种方法**
 
-以上是基本的伤害计算公式和示例计算。根据实际情况，具体数值和结果会有所不同。
+#### **方法1：直接选择发件人地址**
+1. 新建邮件时，点击 **发件人（From）** 字段。
+2. 从下拉列表中选择组邮箱地址（需已添加至账户）。
+3. 撰写邮件并发送，收件人将看到邮件来自共享邮箱。
 
-元素精通在《原神》中主要影响元素反应的伤害。不同元素反应类型的伤害公式有所不同。这里是常见元素反应（如融化、蒸发、超载等）的计算方式。
+**适用场景**：快速切换个人邮箱与共享邮箱。
 
-### 元素反应伤害公式
+#### **方法2：使用组邮箱的独立发件箱**
+1. 在Outlook左侧导航栏找到组邮箱，展开后进入 **发件箱**。
+2. 直接在此发件箱内新建邮件，系统将自动使用共享邮箱地址发送。
 
-1. **蒸发与融化**（乘区）
-   - 蒸发 (火 -> 水) 和融化 (火 -> 冰) 的伤害倍率为1.5倍
-   - 蒸发 (水 -> 火) 和融化 (冰 -> 火) 的伤害倍率为2倍
+**优势**：避免与其他邮件混淆，便于后续跟踪。
 
-2. **增幅反应**（反应基数 × 元素精通加成 × 反应系数）
-   - **超载**、**感电**、**超导**、**超绽放**、**超激化**等
-   - 基本公式：
-     $$
-     \text{反应伤害} = \text{反应基数} \times (1 + \frac{16 \times \text{元素精通}}{\text{元素精通} + 2000}) \times \text{反应系数}
-     $$
+#### **方法3：通过权限代理发送**
+- 若共享邮箱设置了“发送为（Send As）”权限，成员可直接在个人账户中以共享邮箱名义发信，无需切换账户。
+- **设置路径**：管理员需在Exchange管理中心或Microsoft 365管理员后台配置权限。
 
-### 详细公式说明
+---
 
-1. **反应基数**：这是根据角色等级和反应类型确定的一个固定数值。
-2. **元素精通加成**：由角色的元素精通决定。加成计算方式如下：
-   $$
-   \text{元素精通加成} = \frac{16 \times \text{元素精通}}{\text{元素精通} + 2000}
-   $$
-3. **反应系数**：这是特定反应类型的固定值，不同的反应有不同的系数。
+### **四、常见问题及解决方案**
 
-### 示例计算
+#### **问题1：发件人列表中不显示组邮箱**
+- **检查权限**：确认账户是否被授予“发送为”或“代表发送”权限。
+- **重新添加邮箱**：删除后重新配置共享邮箱，或重启Outlook同步数据。
 
-假设某角色触发了蒸发反应，以下是一些假设的数据：
+#### **问题2：收件人看不到组邮箱地址**
+- **检查发件人字段**：确保已正确选择共享邮箱而非默认个人地址。
+- **验证权限**：部分企业限制外部邮件使用共享邮箱，需联系IT部门。
 
-- 元素精通：200
-- 反应基数：1000（假设值）
-- 反应系数：1.5（蒸发反应，火->水）
+#### **问题3：邮件被标记为“由[个人]代发”**
+- **原因**：使用“代表发送（Send on Behalf）”权限时，邮件会显示代发信息。
+- **解决方案**：申请“发送为（Send As）”权限以隐藏个人名称。
 
-首先计算元素精通加成：
-$$
-\text{元素精通加成} = \frac{16 \times 200}{200 + 2000} = \frac{3200}{2200} = 1.4545
-$$
+---
 
-然后计算总伤害：
-$$
-\text{总伤害} = 1000 \times (1 + 1.4545) \times 1.5 = 1000 \times 2.4545 \times 1.5 = 3681.75
-$$
+### **五、最佳实践：提升组邮箱使用效率**
 
-### 实际应用
+1. **设置自动转发规则**  
+   - 将特定类型邮件（如客户咨询）自动转发至负责人，减少手动分配时间。
 
-在实际游戏中，不同的反应系数和反应基数需要根据具体情况查询或计算。总体来说，元素精通对增幅反应（如超载、超导、感电等）和反应系数的影响较大，对于蒸发和融化这类乘区反应，其影响也会通过公式体现。
+2. **分类标签与文件夹**  
+   - 在组邮箱内创建子文件夹（如“待处理/已完成”），配合颜色标签快速归类。
 
-### 注意事项
+3. **统一签名模板**  
+   - 为组邮箱配置标准签名（含团队名称、联系方式），确保对外信息一致性。
 
-1. **蒸发和融化**：这些反应是基于普通攻击、重击、技能等伤害的倍率调整，而非直接计算的额外伤害。
-2. **其他元素反应**：如超载、感电、超导等，都是基于固定反应基数进行计算，并受到元素精通的加成影响。
+4. **定期清理与归档**  
+   - 避免邮箱容量过载，建议每月归档旧邮件至本地或云端存储。
 
-通过理解这些公式，玩家可以更好地优化角色和队伍，最大化伤害输出。
+5. **权限分级管理**  
+   - 根据角色分配权限（如仅核心成员可删除邮件），降低误操作风险。
 
-在《原神》中，元素反应基数是计算元素反应伤害的重要参数。它取决于角色的等级和具体的元素反应类型。以下是各元素反应的基数和相关系数。
+---
 
-### 元素反应基数
+### **六、总结**
 
-不同等级的角色有不同的元素反应基数。下表列出了部分常见等级的元素反应基数：
+组邮箱是团队协作中不可或缺的工具，但需结合规范的操作流程才能最大化其价值。通过合理配置权限、掌握多场景发送方法并建立日常维护机制，团队可显著提升邮件沟通效率。无论是销售跟进客户需求，还是技术支持处理工单，组邮箱都能帮助团队实现“一个入口，全员协作”的目标。
 
-| 角色等级 | 超载、燃烧、超绽放 | 超导 | 感电、开花、激化 | 蔓激化、烈绽放 |
-|:------:|:-----------------:|:----:|:----------------:|:--------------:|
-|   1    |        7.2        |  3   |        6         |      5         |
-|   20   |       65.0        | 27.1 |       54.5       |     45.5       |
-|   40   |      155.2        | 64.7 |      130.2       |    108.6       |
-|   60   |      270.6        | 112.8|      227.0       |    189.4       |
-|   80   |      408.4        | 170.3|      342.4       |    285.6       |
-|   90   |      520.0        | 217.4|      436.7       |    364.9       |
+**小技巧**：在Outlook中为共享邮箱设置快捷键（如`Ctrl+Shift+M`），快速启动新邮件窗口！
 
-### 反应系数
+:::tip
+更多请参阅：
 
-反应系数是特定元素反应的固定值，用于计算伤害时的倍率。常见反应系数如下：
+[允许成员以身份发送或代表组发送](https://learn.microsoft.com/zh-cn/microsoft-365/solutions/allow-members-to-send-as-or-send-on-behalf-of-group?view=o365-worldwide&source=recommendations)
 
-- **超载、燃烧、超绽放**：1.0
-- **超导**：0.5
-- **感电、开花、激化**：1.2
-- **蔓激化**：1.25
-- **烈绽放**：3.0
-
-### 元素精通加成
-
-元素精通加成根据角色的元素精通值计算，公式如下：
-
-$$
-\text{元素精通加成} = \frac{16 \times \text{元素精通}}{\text{元素精通} + 2000}
-$$
-
-### 总伤害计算
-
-元素反应伤害公式可以表示为：
-
-$$
-\text{反应伤害} = \text{反应基数} \times (1 + \frac{16 \times \text{元素精通}}{\text{元素精通} + 2000}) \times \text{反应系数}
-$$
-
-### 示例计算
-
-假设一个角色90级，元素精通为200，触发超载反应。超载反应的基数为520，系数为1.0。
-
-1. 计算元素精通加成：
-   $$
-   \text{元素精通加成} = \frac{16 \times 200}{200 + 2000} = \frac{3200}{2200} \approx 1.4545
-   $$
-
-2. 计算反应伤害：
-   $$
-   \text{反应伤害} = 520 \times (1 + 1.4545) \times 1.0 = 520 \times 2.4545 = 1276.34
-   $$
-
-如果角色触发的是感电反应，感电反应的基数同样为520，但系数为1.2，则计算如下：
-
-1. 计算元素精通加成：
-   $$
-   \text{元素精通加成} = \frac{16 \times 200}{200 + 2000} = 1.4545
-   $$
-
-2. 计算反应伤害：
-   $$
-   \text{反应伤害} = 520 \times (1 + 1.4545) \times 1.2 = 520 \times 2.4545 \times 1.2 = 1531.61
-   $$
-
-### 结论
-
-通过了解反应基数和反应系数，以及如何将元素精通加成应用到公式中，玩家可以更准确地计算和优化角色的元素反应伤害。这有助于在游戏中选择合适的装备和队伍搭配，以最大化输出。
+[Microsoft 365 电子邮件作为通讯组列表发送](https://learn.microsoft.com/zh-cn/microsoft-365/admin/manage/send-email-as-distribution-list?view=o365-worldwide)
+:::
