--- a/docs/tech/2.md
+++ b/docs/tech/2.md
@@ -3,7 +3,7 @@ tags: [技术文档]
 cover: 'https://api.wenturc.com/'
 prev:
    link: ./1.md
-   text: 原神伤害公式
+   text: 高效协作：如何在Outlook中使用共享邮箱地址发送邮件
 next: 
    link: ./3.md
    text: 不同风格的博客站导航栏样式
