fix: docs route

--- a/docs/tech/12.md
+++ b/docs/tech/12.md
@@ -5,7 +5,7 @@ prev:
     link: ./11.md
     text: 创新创业作业
 next: 
-    link: ./13/md
+    link: ./13.md
     txet: 怎么获取文件夹的结构并包含里面的文件
 title: 记录：解决 clamd 进程带来的问题
 ---
