--- a/docs/tech/17.md
+++ b/docs/tech/17.md
@@ -91,7 +91,7 @@ async with aiohttp.ClientSession(connector=aiohttp.TCPConnector(ssl=ssl_context)
 :::
 
 
-通过以上的方式的确是解决了问题，但是别人写的代码不一定每个都会传入 `SSL` 上下文或者为了安全考虑，需要自己修改代码就很麻烦。所以就有了下面的方案。
+通过以上的方式的确是解决了问题，但是别人写的代码不一定每个都会传入 `SSL` 上下文，每次需要自己修改代码就很麻烦。所以就有了下面的方案。
 
 ## 二、配置 `certifi` 证书
 
@@ -113,7 +113,7 @@ sudo update-ca-certificates
 ```
 
 
-后面我通过 `python -c "import ssl; print(ssl.get_default_verify_paths())"` 了解到：
+后面我通过 `python -c "import ssl; print(ssl.get_default_verify_paths())"` 了解到证书的目录：
 
 ```log
 DefaultVerifyPaths(cafile=None, capath='/usr/local/openssl111/certs', openssl_cafile_env='SSL_CERT_FILE', openssl_cafile='/usr/local/openssl111/cert.pem', openssl_capath_env='SSL_CERT_DIR', openssl_capath='/usr/local/openssl111/certs')
@@ -125,10 +125,10 @@ DefaultVerifyPaths(cafile=None, capath='/usr/local/openssl111/certs', openssl_ca
 sudo apt update && sudo apt install --reinstall ca-certificates
 ```
 
-后面发现证书实际是在 `/etc/ssl/certs/` 里面，然后就直接用
+后面发现证书实际是在 `/etc/ssl/certs/` 里面，接着就直接用
 
 ```bash
 sudo cp -r /etc/ssl/certs/* /usr/local/openssl111/certs/
 ```
 
-复制粘贴了过去，然后解决了问题。
+复制粘贴了过去，最后解决了问题。
