--- a/docs/tech/17.md
+++ b/docs/tech/17.md
@@ -33,7 +33,7 @@ class SimpleGoogleGenAIClient:
 
 修改后：
 
-```python
+```python{3-4}
 class SimpleGoogleGenAIClient:
     def __init__(self, api_key: str, api_base: str, timeout: int = 120) -> None:
         import ssl, certifi                                                        
@@ -74,7 +74,7 @@ ssl_context = ssl.create_default_context(cafile=certifi.where())
 
 如果你只是临时调试，可以绕过 SSL 验证：
 
-```python
+```python{4-6}
 import ssl
 import aiohttp
 
@@ -91,7 +91,7 @@ async with aiohttp.ClientSession(connector=aiohttp.TCPConnector(ssl=ssl_context)
 :::
 
 
-通过以上的方式的确是解决了问题，但是别人写的代码不一定每个都会传入 `SSL` 上下文，每次需要自己修改代码就很麻烦。所以就有了下面的方案。
+通过以上的方式的确解决了问题，但是别人写的代码不一定每次都会传入 `SSL` 上下文，需要自己每次修改代码就很麻烦。所以就有了下面的方案。
 
 ## 二、配置 `certifi` 证书
 
