--- a/docs/tech/17.md
+++ b/docs/tech/17.md
@@ -33,19 +33,19 @@ class SimpleGoogleGenAIClient:
 
 修改后：
 
-```python{3-4}
+```python
 class SimpleGoogleGenAIClient:
     def __init__(self, api_key: str, api_base: str, timeout: int = 120) -> None:
-        import ssl, certifi                                                        
-        self.api_key = api_key
+        import ssl, certifi    // [!code ++]                                                    
+        self.api_key = api_key    // [!code ++]
         if api_base.endswith("/"):
             self.api_base = api_base[:-1]
         else:
             self.api_base = api_base
         self.timeout = timeout
-        ssl_context = ssl.create_default_context(cafile=certifi.where())           
-        connector = aiohttp.TCPConnector(ssl=ssl_context)                          
-        self.client = aiohttp.ClientSession(trust_env=True, connector=connector)
+        ssl_context = ssl.create_default_context(cafile=certifi.where())    // [!code ++]
+        connector = aiohttp.TCPConnector(ssl=ssl_context)    // [!code ++]     
+        self.client = aiohttp.ClientSession(trust_env=True, connector=connector)    // [!code highlight]
 ```
 
 :::warning
@@ -74,15 +74,15 @@ ssl_context = ssl.create_default_context(cafile=certifi.where())
 
 如果你只是临时调试，可以绕过 SSL 验证：
 
-```python{4-6}
+```python
 import ssl
 import aiohttp
 
-ssl_context = ssl.create_default_context()
-ssl_context.check_hostname = False
-ssl_context.verify_mode = ssl.CERT_NONE
+ssl_context = ssl.create_default_context()    // [!code ++]
+ssl_context.check_hostname = False    // [!code ++]
+ssl_context.verify_mode = ssl.CERT_NONE    // [!code ++]
 
-async with aiohttp.ClientSession(connector=aiohttp.TCPConnector(ssl=ssl_context)) as session:
+async with aiohttp.ClientSession(connector=aiohttp.TCPConnector(ssl=ssl_context)) as session:    // [!code highlight]
     async with session.get("https://api.github.com") as resp:
         print(await resp.text())
 ```
@@ -116,7 +116,15 @@ sudo update-ca-certificates
 后面我通过 `python -c "import ssl; print(ssl.get_default_verify_paths())"` 了解到证书的目录：
 
 ```log
-DefaultVerifyPaths(cafile=None, capath='/usr/local/openssl111/certs', openssl_cafile_env='SSL_CERT_FILE', openssl_cafile='/usr/local/openssl111/cert.pem', openssl_capath_env='SSL_CERT_DIR', openssl_capath='/usr/local/openssl111/certs')
+DefaultVerifyPaths
+    (
+        cafile=None,
+        capath='/usr/local/openssl111/certs',
+        openssl_cafile_env='SSL_CERT_FILE',
+        openssl_cafile='/usr/local/openssl111/cert.pem',
+        openssl_capath_env='SSL_CERT_DIR',
+        openssl_capath='/usr/local/openssl111/certs'
+    )
 ```
 
 然后看了一眼 `/usr/local/openssl111/certs` 目录，结果里面是空的，什么也没有，但是考虑到之前用了下面的指令解决问题，应该不存在没有的情况。 
