--- a/docs/tech/17.md
+++ b/docs/tech/17.md
@@ -33,19 +33,19 @@ class SimpleGoogleGenAIClient:
 
 修改后：
 
-```python
+```python{3,4,10,11,12}
 class SimpleGoogleGenAIClient:
     def __init__(self, api_key: str, api_base: str, timeout: int = 120) -> None:
-        import ssl, certifi    // [!code ++]                                                    
-        self.api_key = api_key    // [!code ++]
+        import ssl, certifi                                               
+        self.api_key = api_key 
         if api_base.endswith("/"):
             self.api_base = api_base[:-1]
         else:
             self.api_base = api_base
         self.timeout = timeout
-        ssl_context = ssl.create_default_context(cafile=certifi.where())    // [!code ++]
-        connector = aiohttp.TCPConnector(ssl=ssl_context)    // [!code ++]     
-        self.client = aiohttp.ClientSession(trust_env=True, connector=connector)    // [!code highlight]
+        ssl_context = ssl.create_default_context(cafile=certifi.where())
+        connector = aiohttp.TCPConnector(ssl=ssl_context) 
+        self.client = aiohttp.ClientSession(trust_env=True, connector=connector)
 ```
 
 :::warning
@@ -74,15 +74,15 @@ ssl_context = ssl.create_default_context(cafile=certifi.where())
 
 如果你只是临时调试，可以绕过 SSL 验证：
 
-```python
+```python{4-6,8}
 import ssl
 import aiohttp
 
-ssl_context = ssl.create_default_context()    // [!code ++]
-ssl_context.check_hostname = False    // [!code ++]
-ssl_context.verify_mode = ssl.CERT_NONE    // [!code ++]
+ssl_context = ssl.create_default_context()
+ssl_context.check_hostname = False
+ssl_context.verify_mode = ssl.CERT_NONE
 
-async with aiohttp.ClientSession(connector=aiohttp.TCPConnector(ssl=ssl_context)) as session:    // [!code highlight]
+async with aiohttp.ClientSession(connector=aiohttp.TCPConnector(ssl=ssl_context)) as session: 
     async with session.get("https://api.github.com") as resp:
         print(await resp.text())
 ```
