--- a/docs/tech/17.md
+++ b/docs/tech/17.md
@@ -140,3 +140,121 @@ sudo cp -r /etc/ssl/certs/* /usr/local/openssl111/certs/
 ```
 
 复制粘贴了过去，最后解决了问题。
+
+
+## 以下是我在网上找到的解决方案，适用于 `Windows` ，但我没有实践过。
+
+这个错误：
+```plaintext
+Cannot connect to host api.github.com:443 ssl:True [SSLCertVerificationError: (1, '[SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1000)')]
+```
+表明 **Python 无法验证 GitHub API 的 SSL 证书**，通常是由于 SSL 证书丢失、过期或 Python 的 `certifi` 证书存储未正确配置。
+
+---
+
+## **可能的原因**
+1. **Python 证书未安装或损坏**
+   - `certifi` 证书包未正确安装或损坏。
+2. **Python 未正确配置 SSL 证书**
+   - OpenSSL 无法找到 `cacert.pem` 证书文件。
+3. **系统时间不正确**
+   - 如果系统时间不正确，SSL 证书可能会被视为无效。
+4. **网络问题**
+   - 代理、VPN 或防火墙可能会阻止 SSL 连接。
+
+---
+
+## **解决方案**
+### **方法 1：手动安装 SSL 证书**
+在 macOS 和 Windows 上，Python 自带了 `Install Certificates.command` 脚本来更新 CA 证书。
+
+#### **Windows/macOS**
+1. 找到 Python 安装目录（如 `C:\Program Files\PythonXX` 或 `/Applications/Python3.X/`）。
+2. 运行以下脚本：
+   - **Windows**（在命令提示符 `cmd` 中运行）：
+     ```sh
+     C:\Program Files\PythonXX\python.exe -m pip install --upgrade certifi
+     ```
+   - **macOS**（在终端中运行）：
+     ```sh
+     /Applications/Python3.X/Install\ Certificates.command
+     ```
+
+如果这步解决了问题，说明你的 CA 证书丢失或损坏了。
+
+---
+
+### **方法 2：更新 `certifi` 证书**
+```sh
+pip install --upgrade certifi
+```
+然后检查 `certifi` 证书路径：
+```python
+import certifi
+print(certifi.where())  # 查看 `cacert.pem` 位置
+```
+如果仍然出错，你可以手动替换 `cacert.pem`：
+1. **下载最新的 CA 证书**：[https://curl.se/ca/cacert.pem](https://curl.se/ca/cacert.pem)
+2. **覆盖 `certifi` 证书文件**：
+   - 运行 `python -c "import certifi; print(certifi.where())"` 找到 `cacert.pem` 位置。
+   - 用新下载的 `cacert.pem` 替换该文件。
+
+---
+
+### **方法 3：指定证书路径**
+如果 `certifi` 没有正确加载，你可以在代码中手动指定证书路径：
+```python
+import ssl
+import certifi
+
+ssl_context = ssl.create_default_context(cafile=certifi.where())
+
+import urllib.request
+urllib.request.urlopen("https://api.github.com", context=ssl_context)
+```
+这样可以确保 Python 使用 `certifi` 提供的证书文件。
+
+---
+
+### **方法 4：重装 Python**
+如果所有方法都失败，建议重装 Python：
+1. **卸载 Python**（勾选“删除所有用户数据”）。
+2. **从 Python 官网下载安装最新版本**：[https://www.python.org/downloads/](https://www.python.org/downloads/)。
+3. **运行 `Install Certificates.command` 脚本（macOS 需要）**。
+
+---
+
+### **方法 5：检查系统时间**
+SSL 证书验证依赖于正确的系统时间，如果你的时间不正确，会导致证书验证失败：
+- Windows：
+  ```sh
+  w32tm /resync
+  ```
+- macOS/Linux：
+  ```sh
+  sudo ntpdate time.apple.com  # macOS
+  sudo timedatectl set-ntp on  # Linux
+  ```
+
+---
+
+### **方法 6：禁用 SSL 验证（临时解决方案，不推荐）**
+如果你只是临时测试代码，而不在意 SSL 证书验证，可以禁用 SSL 验证：
+```python
+import ssl
+import urllib.request
+
+ssl_context = ssl._create_unverified_context()
+urllib.request.urlopen("https://api.github.com", context=ssl_context)
+```
+⚠️ **风险警告**：禁用 SSL 证书验证会降低安全性，不推荐在生产环境中使用。
+
+---
+
+## **总结**
+✅ **推荐做法**：
+1. 运行 `Install Certificates.command`（macOS/Windows）。
+2. `pip install --upgrade certifi` 并替换 `cacert.pem`。
+3. 手动指定 `ssl.create_default_context(cafile=certifi.where())`。
+4. 检查系统时间是否正确。
+5. 重新安装 Python（如果其他方法无效）。
